# Openlift

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
core-controller/zephyr-demo/: README.md
core-controller/zephyr-demo/app/: CMakeLists.txt  prj.conf
core-controller/zephyr-demo/app/src/: cia417_mock.c  cia417_mock.h  main.c
core-controller/zephyr-demo/mock_devices/: call_panel.py  door_unit.py  requirements.txt
docs/: architecture.md  compliance.md  roadmap.md
tools/bridge-monitor/: README.md
tools/bridge-monitor/firmware/: CMakeLists.txt  prj.conf
tools/bridge-monitor/host/: collector.py  requirements.txt
tools/openvibe/: Dockerfile  Makefile  README.md  __init__.py  core.py  issues.json  openvibe.py  pyproject.toml  requirements.txt  sample_data.csv  sample_door_resonance.csv  sample_guide_wear.csv  service.py
tools/openvibe/mobile/: README.md
tools/openvibe/mobile/openvibe_mobile/: pubspec.yaml
tools/openvibe/mobile/openvibe_mobile/lib/: main.dart
tools/openvibe/src/openvibe/: __init__.py  analysis.py  baselines.py  cli.py  fingerprint.py  metrics.py  reporting.py
tools/openvibe/src/openvibe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/openvibe/tests/: test_analysis.py  test_baselines.py  test_metrics.py  test_openvibe.py
tools/specscanner/: README.md  requirements.txt  service.py  specscanner.py
tools/specscanner/samples/: manual_excerpt.txt
tools/specscanner/tests/: test_specscanner.py
(+1 files in other folders)
